--- a/index.html
+++ b/index.html
@@ -31,148 +31,184 @@
         <h2 id="public">滋賀大学のオリジナルGPTs (全体公開用)</h2>
         <div class="gpt-list-container" id="public-gpt-list">
             <div class="gpt-item">
-                <a href="https://chatgpt.com/g/g-686b3e646cf88191824eb8b93f3ae241-zi-he-da-xue-ihentoshao-jie-ver-2" target="_blank">
-                    <img src="/image/d6f362e7-32d2-45c7-bcc4-677b273328e9.png" alt="GPT Icon" width="50" align="left" style="margin-right: 15px; border-radius: 50%;">
-                    1. 滋賀大学 イベント紹介 ver.2?
-                </a>
-                <p>大学内で行われるイベントを紹介します。（セミナー、公開講座など）</p>
-                <p>作成者: Oishi Yuta</p>
+                <img src="/image/d6f362e7-32d2-45c7-bcc4-677b273328e9.png" alt="GPT Icon" width="50">
+                <div class="gpt-item-content">
+                    <a href="https://chatgpt.com/g/g-686b3e646cf88191824eb8b93f3ae241-zi-he-da-xue-ihentoshao-jie-ver-2" target="_blank">
+                        1. 滋賀大学 イベント紹介 ver.2?
+                    </a>
+                    <p class="gpt-description">大学内で行われるイベントを紹介します。（セミナー、公開講座など）</p>
+                    <p class="gpt-author">作成者: Oishi Yuta</p>
+                </div>
             </div>
             <div class="gpt-item">
-                <a href="https://chatgpt.com/g/g-67f4d29ef75c8191b6e126c7a6787442-zi-he-da-kitutinkaan-nei-2025nian-chun" target="_blank">
-                    <img src="image/326b1648-666e-4d52-8315-944bea1f0009.png" alt="GPT Icon" width="50" align="left" style="margin-right: 15px; border-radius: 50%;">
-                    2. 滋賀大キッチンカー案内（2025年春）
-                </a>
-                <p>滋賀大彦根キャンパスのキッチンカーについて教えてくれます。</p>
-                <p>作成者: NANJO, Hiroaki</p>
+                <img src="image/326b1648-666e-4d52-8315-944bea1f0009.png" alt="GPT Icon" width="50">
+                <div class="gpt-item-content">
+                    <a href="https://chatgpt.com/g/g-67f4d29ef75c8191b6e126c7a6787442-zi-he-da-kitutinkaan-nei-2025nian-chun" target="_blank">
+                        2. 滋賀大キッチンカー案内（2025年春）
+                    </a>
+                    <p class="gpt-description">滋賀大彦根キャンパスのキッチンカーについて教えてくれます。</p>
+                    <p class="gpt-author">作成者: NANJO, Hiroaki</p>
+                </div>
             </div>
             <div class="gpt-item">
-                <a href="https://chatgpt.com/g/g-67f47ee647d081918d6c4888d33f425a-nmfzhi-wen-xiang" target="_blank">
-                    <img src="image/media.png" alt="GPT Icon" width="50" align="left" style="margin-right: 15px; border-radius: 50%;">
-                    3. NMF質問箱
-                </a>
-                <p>非負値行列因子分解（NMF）に関する質問に日本語で答える専門家です。</p>
-                <p>作成者: 佐藤健一</p>
+                <img src="image/media.png" alt="GPT Icon" width="50">
+                <div class="gpt-item-content">
+                    <a href="https://chatgpt.com/g/g-67f47ee647d081918d6c4888d33f425a-nmfzhi-wen-xiang" target="_blank">
+                        3. NMF質問箱
+                    </a>
+                    <p class="gpt-description">非負値行列因子分解（NMF）に関する質問に日本語で答える専門家です。</p>
+                    <p class="gpt-author">作成者: 佐藤健一</p>
+                </div>
             </div>
             <div class="gpt-item">
-                <a href="https://chatgpt.com/g/g-67f5ab1e526881918c31e16378117511-gao-da-jie-sok-shi-yan-yun-yong" target="_blank">
-                    <img src="image/スクリーンショット 2025-04-09 084851.png" alt="GPT Icon" width="50" align="left" style="margin-right: 15px; border-radius: 50%;">
-                    4. 高大接続 (試験運用)
-                </a>
-                <p>高校生や保護者にデータサイエンス学部の説明をします。</p>
-                <p>作成者: 佐藤健一</p>
+                <img src="image/スクリーンショット 2025-04-09 084851.png" alt="GPT Icon" width="50">
+                <div class="gpt-item-content">
+                    <a href="https://chatgpt.com/g/g-67f5ab1e526881918c31e16378117511-gao-da-jie-sok-shi-yan-yun-yong" target="_blank">
+                        4. 高大接続 (試験運用)
+                    </a>
+                    <p class="gpt-description">高校生や保護者にデータサイエンス学部の説明をします。</p>
+                    <p class="gpt-author">作成者: 佐藤健一</p>
+                </div>
             </div>
             <div class="gpt-item">
-                <a href="https://chatgpt.com/g/g-67f8bd954ba08191b6f409aa39db2703-tong-ji-jian-ding-1ji-he-ge-ying-yuan-fen-ye-kotonichu-ti-shi-yan-yun-yong-ban-v1-3" target="_blank">
-                    <img src="image/62734ec0-6e9e-4a05-9077-77714e1bcf24.png" alt="GPT Icon" width="50" align="left" style="margin-right: 15px; border-radius: 50%;">
-                    5. 統計検定1級合格応援 -- 分野ごとに出題（試験運用版）v1.3
-                </a>
-                <p>統計検定1級合格のための練習の問題を出そうとしています。</p>
-                <p>作成者: NANJO, Hiroaki</p>
+                <img src="image/62734ec0-6e9e-4a05-9077-77714e1bcf24.png" alt="GPT Icon" width="50">
+                <div class="gpt-item-content">
+                    <a href="https://chatgpt.com/g/g-67f8bd954ba08191b6f409aa39db2703-tong-ji-jian-ding-1ji-he-ge-ying-yuan-fen-ye-kotonichu-ti-shi-yan-yun-yong-ban-v1-3" target="_blank">
+                        5. 統計検定1級合格応援 -- 分野ごとに出題（試験運用版）v1.3
+                    </a>
+                    <p class="gpt-description">統計検定1級合格のための練習の問題を出そうとしています。</p>
+                    <p class="gpt-author">作成者: NANJO, Hiroaki</p>
+                </div>
             </div>
             <div class="gpt-item hidden-gpt">
-                <a href="https://chatgpt.com/g/g-67f3c2a158288191afde0e8747e54b8b-semixuan-ze-atohaisa2025nian-du-ban" target="_blank">
-                    <img src="image/e40b07b0-4035-4bf7-904b-bbe1862523b2.png" alt="GPT Icon" width="50" align="left" style="margin-right: 15px; border-radius: 50%;">
-                    6. ゼミ選択アドバイザー2025年度版
-                </a>
-                <p>滋賀大学データサイエンス研究科の大学院生が適切なゼミ、指導教員を選ぶための相談役です。</p>
-                <p>作成者: 寺口俊介</p>
+                <img src="image/e40b07b0-4035-4bf7-904b-bbe1862523b2.png" alt="GPT Icon" width="50">
+                <div class="gpt-item-content">
+                    <a href="https://chatgpt.com/g/g-67f3c2a158288191afde0e8747e54b8b-semixuan-ze-atohaisa2025nian-du-ban" target="_blank">
+                        6. ゼミ選択アドバイザー2025年度版
+                    </a>
+                    <p class="gpt-description">滋賀大学データサイエンス研究科の大学院生が適切なゼミ、指導教員を選ぶための相談役です。</p>
+                    <p class="gpt-author">作成者: 寺口俊介</p>
+                </div>
             </div>
             <div class="gpt-item hidden-gpt">
-                <a href="https://chatgpt.com/g/g-67f61df1a19081919270013fea894eb0-zi-he-da-xue-hasuan-nei" target="_blank">
-                    <img src="image/kara.png" alt="GPT Icon" width="50" align="left" style="margin-right: 15px; border-radius: 50%;">
-                    7. 滋賀大学バス案内
-                </a>
-                <p>Helps with queries about Shiga University</p>
-                <p>作成者: Osamu Ichikawa</p>
+                <img src="image/kara.png" alt="GPT Icon" width="50">
+                <div class="gpt-item-content">
+                    <a href="https://chatgpt.com/g/g-67f61df1a19081919270013fea894eb0-zi-he-da-xue-hasuan-nei" target="_blank">
+                        7. 滋賀大学バス案内
+                    </a>
+                    <p class="gpt-description">Helps with queries about Shiga University</p>
+                    <p class="gpt-author">作成者: Osamu Ichikawa</p>
+                </div>
             </div>
             <div class="gpt-item hidden-gpt">
-                <a href="https://chatgpt.com/g/g-6812956be77c81918393f693f0afa105-xue-xi-yong-tetasetutojian-suo" target="_blank">
-                    <img src="image/ChatGPT Image 2025年5月1日 07_34_25.png" alt="GPT Icon" width="50" align="left" style="margin-right: 15px; border-radius: 50%;">
-                    8. 学習用データセット検索
-                </a>
-                <p>Pythonのpydatasetに含まれる約750個のデータセットから目的に応じたものを提案します。</p>
-                <p>作成者: 佐藤健一</p>
+                <img src="image/ChatGPT Image 2025年5月1日 07_34_25.png" alt="GPT Icon" width="50">
+                <div class="gpt-item-content">
+                    <a href="https://chatgpt.com/g/g-6812956be77c81918393f693f0afa105-xue-xi-yong-tetasetutojian-suo" target="_blank">
+                        8. 学習用データセット検索
+                    </a>
+                    <p class="gpt-description">Pythonのpydatasetに含まれる約750個のデータセットから目的に応じたものを提案します。</p>
+                    <p class="gpt-author">作成者: 佐藤健一</p>
+                </div>
             </div>
             <div class="gpt-item hidden-gpt">
-                <a href="https://chatgpt.com/g/g-6821575e3e608191b8fcc2262eab20aa-resihikamera" target="_blank">
-                    <img src="image/e4b0ec86-bf72-43b9-83b9-bf7eb0c64d50.png" alt="GPT Icon" width="50" align="left" style="margin-right: 15px; border-radius: 50%;">
-                    9. レシピカメラ
-                </a>
-                <p>冷蔵庫画像から食材と鮮度・量を読み取り、目的別レシピと保存アドバイスを提案します。</p>
-                <p>作成者: 岡田大輝</p>
+                <img src="image/e4b0ec86-bf72-43b9-83b9-bf7eb0c64d50.png" alt="GPT Icon" width="50">
+                <div class="gpt-item-content">
+                    <a href="https://chatgpt.com/g/g-6821575e3e608191b8fcc2262eab20aa-resihikamera" target="_blank">
+                        9. レシピカメラ
+                    </a>
+                    <p class="gpt-description">冷蔵庫画像から食材と鮮度・量を読み取り、目的別レシピと保存アドバイスを提案します。</p>
+                    <p class="gpt-author">作成者: 岡田大輝</p>
+                </div>
             </div>
             <div class="gpt-item hidden-gpt">
-                <a href="https://chatgpt.com/g/g-684f70191a108191b5237dacf243ecc7-dsyan-jiu-ke-yan-jiu-shi-shao-jie-fei-gong-shi-zi-zhu-semitezuo-cheng" target="_blank">
-                    <img src="image/kara.png" alt="GPT Icon" width="50" align="left" style="margin-right: 15px; border-radius: 50%;">
-                    10. DS研究科研究室紹介（非公式/自主ゼミで作成）
-                </a>
-                <p>滋賀大学大学院データサイエンス研究科の研究室を紹介をするGPTです。</p>
-                <p>作成者: 宮田尚弥</p>
+                <img src="image/kara.png" alt="GPT Icon" width="50">
+                <div class="gpt-item-content">
+                    <a href="https://chatgpt.com/g/g-684f70191a108191b5237dacf243ecc7-dsyan-jiu-ke-yan-jiu-shi-shao-jie-fei-gong-shi-zi-zhu-semitezuo-cheng" target="_blank">
+                        10. DS研究科研究室紹介（非公式/自主ゼミで作成）
+                    </a>
+                    <p class="gpt-description">滋賀大学大学院データサイエンス研究科の研究室を紹介をするGPTです。</p>
+                    <p class="gpt-author">作成者: 宮田尚弥</p>
+                </div>
             </div>
             <div class="gpt-item hidden-gpt">
-                <a href="https://chatgpt.com/g/g-6829e98053e48191abc1a4fe1056b1b4-semishao-jie-jing-ji-temover0-47" target="_blank">
-                    <img src="image/kara.png" alt="GPT Icon" width="50" align="left" style="margin-right: 15px; border-radius: 50%;">
-                    11. ゼミ紹介（経済）_デモver0.47
-                </a>
-                <p>滋賀大学経済学部のゼミ紹介をするGPTです。</p>
-                <p>作成者: 三田村洸明</p>
+                <img src="image/kara.png" alt="GPT Icon" width="50">
+                <div class="gpt-item-content">
+                    <a href="https://chatgpt.com/g/g-6829e98053e48191abc1a4fe1056b1b4-semishao-jie-jing-ji-temover0-47" target="_blank">
+                        11. ゼミ紹介（経済）_デモver0.47
+                    </a>
+                    <p class="gpt-description">滋賀大学経済学部のゼミ紹介をするGPTです。</p>
+                    <p class="gpt-author">作成者: 三田村洸明</p>
+                </div>
             </div>
             <div class="gpt-item hidden-gpt">
-                <a href="https://chatgpt.com/g/g-67f511adaa208191b8a4a3d8739439f4-manahukun" target="_blank">
-                    <img src="image/d9975559-bfb7-4ce7-b9f2-6bce65537217.png" alt="GPT Icon" width="50" align="left" style="margin-right: 15px; border-radius: 50%;">
-                    12. まなぶくん
-                </a>
-                <p>小学校３年生の児童に適した、教育的で楽しい会話を提供します。</p>
-                <p>作成者: Hirofumi SAITO</p>
+                <img src="image/d9975559-bfb7-4ce7-b9f2-6bce65537217.png" alt="GPT Icon" width="50">
+                <div class="gpt-item-content">
+                    <a href="https://chatgpt.com/g/g-67f511adaa208191b8a4a3d8739439f4-manahukun" target="_blank">
+                        12. まなぶくん
+                    </a>
+                    <p class="gpt-description">小学校３年生の児童に適した、教育的で楽しい会話を提供します。</p>
+                    <p class="gpt-author">作成者: Hirofumi SAITO</p>
+                </div>
             </div>
             <div class="gpt-item hidden-gpt">
-                <a href="https://chatgpt.com/g/g-6844502d9e288191807cbf1060246d56-semishao-jie-ds-temover0-18" target="_blank">
-                    <img src="image/kara.png" alt="GPT Icon" width="50" align="left" style="margin-right: 15px; border-radius: 50%;">
-                    13. ゼミ紹介（DS）_デモver0.18
-                </a>
-                <p>滋賀大学データサイエンス学部のゼミ紹介をするGPTです。</p>
-                <p>作成者: 三田村洸明</p>
+                <img src="image/kara.png" alt="GPT Icon" width="50">
+                <div class="gpt-item-content">
+                    <a href="https://chatgpt.com/g/g-6844502d9e288191807cbf1060246d56-semishao-jie-ds-temover0-18" target="_blank">
+                        13. ゼミ紹介（DS）_デモver0.18
+                    </a>
+                    <p class="gpt-description">滋賀大学データサイエンス学部のゼミ紹介をするGPTです。</p>
+                    <p class="gpt-author">作成者: 三田村洸明</p>
+                </div>
             </div>
             <div class="gpt-item hidden-gpt">
-                <a href="https://chatgpt.com/g/g-6829d3002f608191839c1217c700f309-semishao-jie-temover0-1" target="_blank">
-                    <img src="image/ChatGPT Image 2025年5月19日 16_16_08.png" alt="GPT Icon" width="50" align="left" style="margin-right: 15px; border-radius: 50%;">
-                    14. ゼミ紹介_デモver0.1
-                </a>
-                <p>滋賀大学経済学部のゼミ紹介をするGPTです。</p>
-                <p>作成者: 三田村洸明</p>
+                <img src="image/ChatGPT Image 2025年5月19日 16_16_08.png" alt="GPT Icon" width="50">
+                <div class="gpt-item-content">
+                    <a href="https://chatgpt.com/g/g-6829d3002f608191839c1217c700f309-semishao-jie-temover0-1" target="_blank">
+                        14. ゼミ紹介_デモver0.1
+                    </a>
+                    <p class="gpt-description">滋賀大学経済学部のゼミ紹介をするGPTです。</p>
+                    <p class="gpt-author">作成者: 三田村洸明</p>
+                </div>
             </div>
             <div class="gpt-item hidden-gpt">
-                <a href="https://chatgpt.com/g/g-68216bc4c2f48191a9d1645342b9f9a2-zi-he-da-xue-bu-huo-sakuruan-nei-gpt-shi-yan-yun-yong-ban" target="_blank">
-                    <img src="image/kara.png" alt="GPT Icon" width="50" align="left" style="margin-right: 15px; border-radius: 50%;">
-                    15. 滋賀大学 部活・サークル案内GPT（試験運用版）
-                </a>
-                <p>どのような部活・サークルをお探しですか？お手伝いします！</p>
-                <p>作成者: 福山太陽</p>
+                <img src="image/kara.png" alt="GPT Icon" width="50">
+                <div class="gpt-item-content">
+                    <a href="https://chatgpt.com/g/g-68216bc4c2f48191a9d1645342b9f9a2-zi-he-da-xue-bu-huo-sakuruan-nei-gpt-shi-yan-yun-yong-ban" target="_blank">
+                        15. 滋賀大学 部活・サークル案内GPT（試験運用版）
+                    </a>
+                    <p class="gpt-description">どのような部活・サークルをお探しですか？お手伝いします！</p>
+                    <p class="gpt-author">作成者: 福山太陽</p>
+                </div>
             </div>
             <div class="gpt-item hidden-gpt">
-                <a href="https://chatgpt.com/g/g-680f495d51fc8191962c9fcdf0abd275-jiao-shi-nasixue-xi-si-kou-dan-dang-fen-teitinkuasisutanto" target="_blank">
-                    <img src="image/c74d4131-89f5-434f-8ece-627136d64291.png" alt="GPT Icon" width="50" align="left" style="margin-right: 15px; border-radius: 50%;">
-                    16. 教師なし学習（寺口担当分）ティーチングアシスタント
-                </a>
-                <p>滋賀大学データサイエンス研究科の教師なし学習（寺口担当分）のティーチングアシスタントです。</p>
-                <p>作成者: 寺口俊介</p>
+                <img src="image/c74d4131-89f5-434f-8ece-627136d64291.png" alt="GPT Icon" width="50">
+                <div class="gpt-item-content">
+                    <a href="https://chatgpt.com/g/g-680f495d51fc8191962c9fcdf0abd275-jiao-shi-nasixue-xi-si-kou-dan-dang-fen-teitinkuasisutanto" target="_blank">
+                        16. 教師なし学習（寺口担当分）ティーチングアシスタント
+                    </a>
+                    <p class="gpt-description">滋賀大学データサイエンス研究科の教師なし学習（寺口担当分）のティーチングアシスタントです。</p>
+                    <p class="gpt-author">作成者: 寺口俊介</p>
+                </div>
             </div>
             <div class="gpt-item hidden-gpt">
-                <a href="https://chatgpt.com/g/g-67fbad6d2fec81918729184436d71532-guan-shu-tetajie-xi-zhi-wen-xiang" target="_blank">
-                    <img src="image/affa548f-a67e-454a-b021-976597bc0b9a.png" alt="GPT Icon" width="50" align="left" style="margin-right: 15px; border-radius: 50%;">
-                    17. 関数データ解析質問箱
-                </a>
-                <p>関数データ解析の専門家として講義資料とRコードに基づき質問に回答します。</p>
-                <p>作成者: Hidetoshi Matsui</p>
+                <img src="image/affa548f-a67e-454a-b021-976597bc0b9a.png" alt="GPT Icon" width="50">
+                <div class="gpt-item-content">
+                    <a href="https://chatgpt.com/g/g-67fbad6d2fec81918729184436d71532-guan-shu-tetajie-xi-zhi-wen-xiang" target="_blank">
+                        17. 関数データ解析質問箱
+                    </a>
+                    <p class="gpt-description">関数データ解析の専門家として講義資料とRコードに基づき質問に回答します。</p>
+                    <p class="gpt-author">作成者: Hidetoshi Matsui</p>
+                </div>
             </div>
             <div class="gpt-item hidden-gpt">
-                <a href="https://chatgpt.com/g/g-6833e17e9a9c8191a6b197a176db3c9a-chef" target="_blank">
-                    <img src="image/kara.png" alt="GPT Icon" width="50" align="left" style="margin-right: 15px; border-radius: 50%;">
-                    18. chef
-                </a>
-                <p>Gpt gives us ideas of dishes.</p>
-                <p>作成者: Moto Tanaka</p>
+                <img src="image/kara.png" alt="GPT Icon" width="50">
+                <div class="gpt-item-content">
+                    <a href="https://chatgpt.com/g/g-6833e17e9a9c8191a6b197a176db3c9a-chef" target="_blank">
+                        18. chef
+                    </a>
+                    <p class="gpt-description">Gpt gives us ideas of dishes.</p>
+                    <p class="gpt-author">作成者: Moto Tanaka</p>
+                </div>
             </div>
             <button class="toggle-gpt-list" data-target="public-gpt-list">もっと見る</button>
         </div>
