--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>滋賀大学 自主ゼミ　オリジナルChatGPTを作ろう！</h1>
+        <h1 class="seminar-title">滋賀大学 自主ゼミ　オリジナルChatGPTを作ろう！</h1>
         <p>ようこそ！このサイトでは、滋賀大学の先生方および、南條・飯山ゼミ：ChatGPT研究会が開発した、オリジナルChatGPTの紹介サイトです。ここでは、モデルの基本的な使い方から、研究開発の少し専門的な話まで、すべての情報を1ページで紹介しています。</p>
 
         <hr class="separator">
