--- a/index.html
+++ b/index.html
@@ -27,8 +27,22 @@
         <p>この「独自の知識」と「独自の対話ルール」の組み合わせによって、他にはないオリジナリティのある、皆さん専用のChatGPTが実現されています。</p>
 
         <hr class="separator">
+        <h2 id="internet-public">滋賀大学のオリジナルGPTs (インターネット公開)</h2>
+        <div class="gpt-list-container" id="internet-public-gpt-list">
+            <div class="gpt-item">
+                <img src="image/d6f362e7-32d2-45c7-bcc4-677b273328e9.png" alt="GPT Icon" width="50">
+                <div class="gpt-item-content">
+                    <a href="https://chatgpt.com/g/g-686b3e646cf88191824eb8b93f3ae241-zi-he-da-xue-ihentoshao-jie-ver-2"
+                        target="_blank">
+                        1. 滋賀大学 イベント紹介 ver.2?
+                    </a>
+                    <p class="gpt-description">大学内で行われるイベントを紹介します。（セミナー、公開講座など）</p>
+                    <p class="gpt-author">作成者: Oishi Yuta</p>
+                </div>
+            </div>
+        <hr class="separator">
 
-        <h2 id="public">滋賀大学のオリジナルGPTs (全体公開用)</h2>
+        <h2 id="public">滋賀大学のオリジナルGPTs (大学内公開用)</h2>
         <div class="gpt-list-container" id="public-gpt-list">
             <div class="gpt-item">
                 <img src="/image/d6f362e7-32d2-45c7-bcc4-677b273328e9.png" alt="GPT Icon" width="50">
@@ -317,7 +331,18 @@
                     <p class="gpt-author">作成者: 岸田洋明</p>
                 </div>
             </div>
-            <button class="toggle-gpt-list" data-target="research-gpt-list">もっと見る</button>
+            <div class="gpt-item hidden-gpt">
+                <img src="image/ChatGPT Image 2025年5月13日 10_27_11.png" alt="GPT Icon" width="50">
+                <div class="gpt-item-content">
+                    <a href="https://chatgpt.com/g/g-68229cf1f46881919ffc4809812d86c5-zi-he-da-xue-kiyariaxiang-tan-shi-li-gen-chuan-shi" target="_blank">
+                        11. 滋賀大学キャリア相談室・利根川式
+                    </a>
+                    <p class="gpt-description">滋賀大学のキャリア相談員。利根川式の叱咤激励で、迷える者に進むべき道を示す。</p>
+                    <p class="gpt-author">作成者: 瀬川　正之</p>
+                </div>
+            </div>
+            ---
+
         </div>
     </div>
 
