--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <h2 id="public">滋賀大学のオリジナルGPTs (大学内公開用)</h2>
         <div class="gpt-list-container" id="public-gpt-list">
             <div class="gpt-item">
-                <img src="/image/d6f362e7-32d2-45c7-bcc4-677b273328e9.png" alt="GPT Icon" width="50">
+                <img src="image/d6f362e7-32d2-45c7-bcc4-677b273328e9.png" alt="GPT Icon" width="50">
                 <div class="gpt-item-content">
                     <a href="https://chatgpt.com/g/g-686b3e646cf88191824eb8b93f3ae241-zi-he-da-xue-ihentoshao-jie-ver-2" target="_blank">
                         1. 滋賀大学 イベント紹介 ver.2?
@@ -341,7 +341,7 @@
                     <p class="gpt-author">作成者: 瀬川　正之</p>
                 </div>
             </div>
-            ---
+            <button class="toggle-gpt-list" data-target="research-gpt-list">もっと見る</button>
 
         </div>
     </div>
