--- a/index.html
+++ b/index.html
@@ -30,14 +30,13 @@
         <h2 id="internet-public">滋賀大学のオリジナルGPTs (インターネット公開)</h2>
         <div class="gpt-list-container" id="internet-public-gpt-list">
             <div class="gpt-item">
-                <img src="image/d6f362e7-32d2-45c7-bcc4-677b273328e9.png" alt="GPT Icon" width="50">
+                <img src="image/c80b9d04-adbf-4aea-9432-81d90cb18c4b.png" alt="GPT Icon" width="50">
                 <div class="gpt-item-content">
-                    <a href="https://chatgpt.com/g/g-686b3e646cf88191824eb8b93f3ae241-zi-he-da-xue-ihentoshao-jie-ver-2"
-                        target="_blank">
-                        1. 滋賀大学 イベント紹介 ver.2?
+                    <a href="https://chatgpt.com/g/g-67ecddccd8408191b28732e239323cb9-sikamesinahi" target="_blank">
+                        1. しがメシナビ
                     </a>
-                    <p class="gpt-description">大学内で行われるイベントを紹介します。（セミナー、公開講座など）</p>
-                    <p class="gpt-author">作成者: Oishi Yuta</p>
+                    <p class="gpt-description">[2025/07 ver2.0] 本当に滋賀大生協にあるメニューかを確認すると、修正しようとがんばります。下にある4種類から会話を始めるとうまくいくことが多いです。</p>
+                    <p class="gpt-author">作成者: NANJO, Hiroaki</p>
                 </div>
             </div>
         <hr class="separator">
