--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="container">
         <h1 class="seminar-title">滋賀大学 自主ゼミ　オリジナルChatGPTを作ろう！</h1>
-        <p>ようこそ！このサイトでは、滋賀大学の先生方および、南條・飯山ゼミ：ChatGPT研究会が開発した、オリジナルChatGPTの紹介サイトです。ここでは、モデルの基本的な使い方から、研究開発の少し専門的な話まで紹介しています。
+        <p>ようこそ！このサイトでは、南條・飯山ゼミ：ChatGPT研究会が開発した、オリジナルChatGPTの紹介サイトです。ここでは、モデルの基本的な使い方から、研究開発の少し専門的な話まで紹介しています。
         </p>
 
         <hr class="separator">
